--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p><b>Muzyka</b></p>
+   <div>
+   <p><b>Muzyka</b></p>
 
 
 <p>Najlepszą rzeczą na świecie jest muzyka. Muzyka to świetny sposób na spędzenie czasu. Można słuchać różnych rodzajów muzyki, w zależności od tego co lubimy. Dla osób spokojnych  zapewne najlepsza będzie muzyka klasyczna, a dla osób o wysokim ilorazie inteligencji - utwory takie jak np. "Skibiditoilet goni mnie" Przemka Pro bestGAMES której tekst brzmi:</p>
@@ -56,9 +57,9 @@
 
 <p>Poprzez muzykę ludzie znajdują nowe znajomości. Osoby słuchające tego samego typu muzyki,bardzo często mają do siebie podobne zainteresowania i charaktery. Granie na różnych instrumentach to świetna forma rozrywki, która jest również pożyteczna, ponieważ rozwija naszą inteligencję emocjonalną i umysłową. Świetnym sposobem na rozpoczęcie nauki gry na instrumencie jest posłuchanie jak brzmią poszczególne z nich i wybranie najbardziej nam odpowiadającego. Większość osób sięga po gitare lub pianino(keyborda), ponieważ są to najbardziej znane i najbardziej dostępne instrumenty na świecie. Można uczyc się w szkole muzycznej lub indywidualne zajęcia w domu - w tym przypadku trzeba posiadać swój własny instrument. Lecz nie trzeba wydawać pieniędzy na dodatkowe lekcje, ponieważ mozna uczyć się samemu w domu. Jest pełno darmowych kursów jak nauczyć się np. czytania nut.</p>
 
-<img src="kkkk.jfif">
-<img src="kkkk.jfif"><img src="kkkk.jfif"><img src="kkkk.jfif"><img src="kkkk.jfif"><img src="kkkk.jfif"><img src="kkkk.jfif"><img src="kkkk.jfif"><img src="kkkk.jfif"><img src="kkkk.jfif"><img src="kkkk.jfif"><img src="kkkk.jfif"><img src="kkkk.jfif"><img src="kkkk.jfif"><img src="kkkk.jfif"><img src="kkkk.jfif">
+
 <a href ="https://www.bing.com/videos/riverview/relatedvideo?q=skibidi+toilet+przemek+best+games&mid=1A8B26F0CCDBE0E2A52F1A8B26F0CCDBE0E2A52F&FORM=VIRE">Skibidi</a>
+</div>
 </body>
 </html>
 <head><link rel="stylesheet" href="style.css"></head>
